<resources>
    <string name="app_name">Numbers</string>

    <!-- Navigation drawer -->
    <string name="menu_numbers">Numbers</string>
    <string name="menu_saved_numbers">Saved numbers</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_title_group">Other</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="numbers_activity_title">Number</string>
    <string name="saved_numbers_activity_title">Saved numbers</string>
    <string name="history_numbers_activity_title">History</string>
    <string name="about_activity_title">About</string>

    <!-- NumbersFragment -->
    <string name="edit_text_hint">Enter number</string>
    <string name="spinner_hint">Choose query type</string>
    <string name="button_text">Submit</string>
    <string name="empty_description_text">No description</string>
    <string name="input_error">Input is not correct</string>
    <string name="share">Share</string>
    <string name="question_button_text">\?</string>
    <string name="hint_text">You can pass: \n \n
        number: 2 \n
        range: 1..3 or 1,4,7 \n
        date: 2(day)/30(month)</string>

    <!-- SavedOrHistoryFragment -->
    <string name="description_empty_view">You don\'t have any data</string>
    <string name="title_delete_all_number">Delete all numbers</string>
    <string name="title_delete_number">Delete number</string>
    <string name="title_share_number">Share number</string>
    <string name="current_number_share_intent_theme">It is interesting fact!</string>
    <string name="share_chooser_title">Choose application</string>

    <!-- Delete number dialog -->
    <string name="dialog_delete_number_title">Delete current number?</string>
    <string name="dialog_delete_all_number_title">Delete all numbers?</string>
    <string name="dialog_ok_button">DELETE</string>
    <string name="dialog_cancel_button">CANCEL</string>
    <string name="snack_bar_delete_number_text">Number is deleted</string>
    <string name="snack_bar_delete_all_numbers_text">Numbers is deleted</string>

    <!-- AboutFragment -->
    <string name="about_text">This application helps you to find meaning of the number. \n
        Enter number, choose type of fact and submit! \nSave and share it!</string>

</resources>
