<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/numbers_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/linear_layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/numbers_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_layout_margin_top">

                <EditText
                    android:id="@+id/number_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edit_text_margin_end"
                    android:layout_marginStart="@dimen/edit_text_margin_start"
                    android:hint="@string/edit_text_hint"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/spinner_query_type_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spinner_margin_bottom"
                android:layout_marginEnd="@dimen/spinner_margin_end"
                android:layout_marginStart="@dimen/spinner_margin_start"
                android:layout_marginTop="@dimen/spinner_margin_top"
                android:text="@string/spinner_hint"/>

            <Spinner
                android:id="@+id/query_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spinner_margin_end"
                android:layout_marginStart="@dimen/spinner_margin_start"/>

            <View
                android:id="@+id/spinner_query_type_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_divider_height"
                android:layout_marginEnd="@dimen/spinner_margin_end"
                android:layout_marginStart="@dimen/spinner_margin_start"
                android:layout_marginTop="@dimen/spinner_divider_margin_top"
                android:background="@android:color/black"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/button_margin_top"
                android:background="@drawable/submit_button_circle_borded"
                android:text="@string/button_text"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/number_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_margin_bottom"
                android:layout_marginTop="@dimen/description_margin_top"
                android:gravity="center"
                android:text="@string/empty_description_text"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
